fix: increase homepage heading margin-bottom spacing in phone view

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -239,7 +239,7 @@
       margin-bottom: var(--space-7);
 
       @include respond(phone) {
-        margin: 0;
+        margin-bottom: var(--space-4);
       }
     }
 
@@ -485,7 +485,7 @@
       margin-top: var(--space-12);
 
       @include respond(phone) {
-        margin-top: var(--space-8);
+        margin-top: var(--space-4);
         gap: var(--space-1);
       }
 
